--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -12,12 +12,12 @@ $dark: black;
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    // color: white ;
+    font-family: $RobotoSlab !important;
 }
 
 .container {
     color: black;
     background-color: white;
     margin: 0rem 6rem ;
-    height: 100vh; // need to change
+    // height: 100vh; // need to change
 }
