--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -8,6 +8,7 @@
     .nav-title {
         font-family: $Caprasimo;
         font-size: 2rem;
+        font-weight: bolder;
         // color: white;
     }
 
