jekyll: theme updated!

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
         </div>
       </div>
       <div class="block-2">
-        <img src="/assets/images/happy avatar.png" alt="Happy face avatar">
+        <img src="assets/images/happy avatar.png" alt="Happy face avatar">
       </div>
     </div>
     <div class="container-block container-block-second">
@@ -33,7 +33,7 @@
             Beginner-friendly coding fun awaits! Get ready to level up with confidence!
           </div>
         </div>
-        <img src="/assets/images/hi.png" alt="happy waving avatar" class="first-image" />
+        <img src="assets/images/hi.png" alt="happy waving avatar" class="first-image" />
       </div>
       <div class="sub-block-medium">
         <div class="sub-block-wrap">
@@ -42,7 +42,7 @@
             Midway Madness! Get ready to embrace the excitement of problem-solving!
           </div>
         </div>
-        <img src="/assets/images/tired.png" alt="tensed avatar" class="second-image" />
+        <img src="assets/images/tired.png" alt="tensed avatar" class="second-image" />
       </div>
       <div class="sub-block-hard">
         <div class="sub-block-wrap">
@@ -52,13 +52,13 @@
             challenge!
           </div>
         </div>
-        <img src="/assets/images/cry.png" alt="crying avatar" class="third-image" />
+        <img src="assets/images/cry.png" alt="crying avatar" class="third-image" />
       </div>
     </div>
   </div>
 
   <div class="footer">
-    
+
   </div>
 </body>
 
