--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,10 +2,7 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   {% include styles.html %}
-  <title>{{ site.title }}</title>
 </head>
 
 <body>
@@ -28,7 +25,10 @@
     <div class="container-block container-block-second">
       <div class="sub-block-easy">
         <div class="sub-block-wrap">
-          <div class="sub-block-head">Easy</div>
+          <div class="link">🔗</div>
+          <div class="sub-block-head">
+            Easy
+          </div>
           <div class="sub-block-content">
             Beginner-friendly coding fun awaits! Get ready to level up with confidence!
           </div>
@@ -37,7 +37,10 @@
       </div>
       <div class="sub-block-medium">
         <div class="sub-block-wrap">
-          <div class="sub-block-head">Medium</div>
+          <div class="link">🔗</div>
+          <div class="sub-block-head">
+            Medium
+          </div>
           <div class="sub-block-content">
             Midway Madness! Get ready to embrace the excitement of problem-solving!
           </div>
@@ -46,7 +49,9 @@
       </div>
       <div class="sub-block-hard">
         <div class="sub-block-wrap">
-          <div class="sub-block-head">Hard</div>
+          <div class="link">🔗</div>
+          <div class="sub-block-head">
+            Hard</div>
           <div class="sub-block-content">
             Ultimate coding adventure alert! Master advanced techniques and conquer the
             challenge!
@@ -58,7 +63,7 @@
   </div>
 
   <div class="footer">
-
+    <!-- optional -->
   </div>
 </body>
 
