--- a/_includes/styles.html
+++ b/_includes/styles.html
@@ -1,8 +1,14 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>{{ site.title }}</title>
 
-<link rel="stylesheet" href="assets/css/styles.css">
+{% if page.url == '/easy/' %}
+<title>{{ site.title }} | {{ page.title }}</title>
+{% else %}
+<title>{{ site.title }}</title>
+{% endif %}
+
+<link rel="shortcut icon" href="{{site.baseurl}}assets/favicon.ico" type="image/x-icon">
+<link rel="stylesheet" href="{{site.baseurl}}assets/css/styles.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link
