jekyll: post added!

--- a/_includes/styles.html
+++ b/_includes/styles.html
@@ -7,8 +7,8 @@
 <title>{{ site.title }}</title>
 {% endif %}
 
-<link rel="shortcut icon" href="{{site.baseurl}}assets/favicon.ico" type="image/x-icon">
-<link rel="stylesheet" href="{{site.baseurl}}assets/css/styles.css">
+<link rel="shortcut icon" href="{{site.baseurl}}/assets/favicon.ico" type="image/x-icon">
+<link rel="stylesheet" href="{{site.baseurl}}/assets/css/styles.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link
