--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,11 +19,11 @@
         </div>
       </div>
       <div class="block-2">
-        <img src="{{site.baseurl}}assets/images/happy avatar.png" alt="Happy face avatar">
+        <img src="{{site.baseurl}}/assets/images/happy avatar.png" alt="Happy face avatar">
       </div>
     </div>
     <div class="container-block container-block-second">
-      <a href="{{site.baseurl}}easy/" class="sub-block-easy">
+      <a href="{{site.baseurl}}/easy/" class="sub-block-easy">
         <div class="sub-block-wrap">
           <div class="link">🔗</div>
           <div class="sub-block-head">
@@ -33,9 +33,9 @@
             Beginner-friendly coding fun awaits! Get ready to level up with confidence!
           </div>
         </div>
-        <img src="{{site.baseurl}}assets/images/hi.png" alt="happy waving avatar" class="first-image" />
+        <img src="{{site.baseurl}}/assets/images/hi.png" alt="happy waving avatar" class="first-image" />
       </a>
-      <a href="{{site.baseurl}}medium/" class="sub-block-medium">
+      <a href="{{site.baseurl}}/medium/" class="sub-block-medium">
         <div class="sub-block-wrap">
           <div class="link">🔗</div>
           <div class="sub-block-head">
@@ -45,9 +45,9 @@
             Midway Madness! Get ready to embrace the excitement of problem-solving!
           </div>
         </div>
-        <img src="{{site.baseurl}}assets/images/tired.png" alt="tensed avatar" class="second-image" />
+        <img src="{{site.baseurl}}/assets/images/tired.png" alt="tensed avatar" class="second-image" />
       </a>
-      <a href="{{site.baseurl}}hard/" class="sub-block-hard">
+      <a href="{{site.baseurl}}/hard/" class="sub-block-hard">
         <div class="sub-block-wrap">
           <div class="link">🔗</div>
           <div class="sub-block-head">
@@ -57,7 +57,7 @@
             challenge!
           </div>
         </div>
-        <img src="{{site.baseurl}}assets/images/cry.png" alt="crying avatar" class="third-image" />
+        <img src="{{site.baseurl}}/assets/images/cry.png" alt="crying avatar" class="third-image" />
       </a>
     </div>
   </div>
